# lolapy-lite-agent

./: PACKAGE.md  pyproject.toml  pytest.ini
example/: assistant.py  cache_aside_tests.py  test_push_notifications.py
lolapy/assistant/: __init__.py  nlp_job.py  utils.py
lolapy/assistant/agents/lola/: __init__.py  lola.py  (+4 more)
lolapy/assistant/gateway/: __init__.py  context.py  gateway.py  message_gateway.py
lolapy/assistant/history/: base_history_provider.py  history_redis_provider.py  history_redis_provider_async.py
lolapy/assistant/pml/: function_plugin.py  pml_builder.py  prompt_compiler.py  sample_prompt.pml
lolapy/assistant/state/: base_state_provider.py  state_redis_provider.py  state_store_provider.py
lolapy/assistant/stores/: __init__.py  async_cache_aside_redis.py  cache_aside_redis.py  list_redis_store_async.py
lolapy_lite_agent/: __init__.py  agent_controller.py  chat_lead.py  handlebars_helpers.py  lola_plugin.py  nlp_job.py  prompt_compiler.py
lolapy_lite_agent/agents/: lola.py  lola_test_blend.py  utils.py
lolapy_lite_agent/caching/: cache_aside_redis.py
lolapy_lite_agent/history/: base_history_provider.py  history_redis_provider.py
lolapy_lite_agent/pml/: function_plugin.py  pml_builder.py
lolapy_lite_agent/state/: base_state_provider.py  state_redis_provider.py
tests/: message_gateway_test.py
tests/nlp_history/: history_redis.py  history_redis_async.py
tests/nlp_state/: state_redis_provider_test.py
tests/storage/: async_cache_aside_redis_test.py  cache_aside_redis_test.py  list_redis_store_async_test.py  memory_cache_test.py
